# EZQUANT

./: .gitignore  ALLEN_SEGMENTER_INTEGRATION.md  BATCH_SEGMENTATION_GUIDE.md  BUILD_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_GUIDE_TASKS_7_11.md  LICENSE.txt  PROJECT_STATUS.md  PYTORCH_UPGRADE_GUIDE.md  QUICK_INTEGRATION.md  QUICK_START_MULTIFILE.md  README.md  SIMULATION_VALIDATION.md  TASKS_12_13_COMPLETE.md  TASKS_7_11_COMPLETE.md  TASK_14_COMPLETE.md  VSI_LIF_IMPLEMENTATION.md  VSI_LIF_README.md  WORKFLOW_UPDATE.md  build.spec  check_syntax.py  create_icon.py  install.bat  installer.iss  main.py  pyproject.toml  requirements.txt  requirements_updated.txt  start.bat  test_all_modules.py  uninstall.bat  upgrade_pytorch.bat  validate_simulation.py  version_info.txt  workspace.code-workspace
configs/: lab_policy.default.yaml  lab_policy.example_strict.yaml
core/: __init__.py  ab_tournament.py  active_learning.py  bioformats_io.py  cellpose3_restoration.py  image_io.py  measurements.py  metamorph_nd.py  plugin_loader.py  policy_engine.py  project_data.py  quality_control.py  segmentation.py  segmentation_3d.py  segmentation_backend.py
docs/: 3D_SEGMENTATION_ACTIVE_LEARNING_GUIDE.md  INSTRUCTOR_GUIDE.md  PLUGIN_DEVELOPMENT.md  QUICK_START.md  RECIPE_DEV_GUIDE.md  STUDENT_GUIDE.md
ezquant/: __init__.py
gui/: __init__.py  ab_tournament_panel.py  accessibility.py  analysis_panel.py  batch_processing.py  image_viewer.py  main_window.py  manual_correction_tools.py  (+8 more)
(+71 files in other folders)
